--- a/test123.ioc
+++ b/test123.ioc
@@ -23,19 +23,23 @@ Mcu.Name=STM32H723ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PE1
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin13=VP_NUCLEO-H723ZG_VS_BSP_COMMON
+Mcu.Pin10=PD8
+Mcu.Pin11=PD9
+Mcu.Pin12=PA13(JTMS/SWDIO)
+Mcu.Pin13=PA14(JTCK/SWCLK)
+Mcu.Pin14=PE1
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin17=VP_NUCLEO-H723ZG_VS_BSP_COMMON
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PB0
-Mcu.Pin4=PE13
-Mcu.Pin5=PB14
-Mcu.Pin6=PD8
-Mcu.Pin7=PD9
-Mcu.Pin8=PA13(JTMS/SWDIO)
-Mcu.Pin9=PA14(JTCK/SWCLK)
-Mcu.PinsNb=14
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PE13
+Mcu.Pin9=PB14
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H723ZGTx
@@ -67,6 +71,14 @@ PA14(JTCK/SWCLK).GPIOParameters=GPIO_Label
 PA14(JTCK/SWCLK).GPIO_Label=SWCLK
 PA14(JTCK/SWCLK).Locked=true
 PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA4.Locked=true
+PA4.Signal=SPI1_NSS
+PA5.Locked=true
+PA5.Signal=SPI1_SCK
+PA6.Locked=true
+PA6.Signal=SPI1_MISO
+PA7.Locked=true
+PA7.Signal=SPI1_MOSI
 PB0.Locked=true
 PB0.Signal=USB_OTG_HS_ULPI_D1
 PB14.Locked=true
